--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <link rel="icon" type="image/*" href="/uex.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="i18n" content="zh-CN:08d06f4c69181a584761be4af2718d85 zh-TW:ef3abf6e84a68907fff9d0433639f6f7 zh-HK:395affdf13ba80b21c7aa4267f10cafa" />
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
